--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## Python and Jupyter stuff
+.ipynb_checkpoints
+__pycache__
+*.pyc
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -19,10 +24,9 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
-
-## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+*.pdf
+!main.pdf
+!img/*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
