--- a/environment.yml
+++ b/environment.yml
@@ -12,3 +12,4 @@ dependencies:
     - pip:
         - ciw==2.0.1
         - git+https://github.com/daffidwilde/kmodes@v0.9.0
+        - yellowbrick==1.0.1
